fix for header, alignment fixes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -315,17 +315,20 @@ header nav .nav-back-btn span {
     position: relative;
     height: 70px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     border-bottom: 3px;
     cursor: pointer;
     font-size: 13px;
-    margin-right: 10px;
   }
 
   header nav .nav-sections>ul>li>strong {
     border-bottom: 3px solid var(--global-color-selective-yellow);
     height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  header nav .nav-sections>ul>li>a {
+    height: 70px;
     display: flex;
     align-items: center;
   }
