--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -606,7 +606,7 @@
 #search-dialog .search-header img {
   height: auto;
   padding-left: 6.3px;
-  width: 104px;  
+  width: 110px;  
 }
 
 #search-dialog .search-results-container {
